<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RateActivity" >

    <EditText
        android:id="@+id/editRMB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editrmb_hint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnDollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dollar_label" />

    <Button
        android:id="@+id/btnEuro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_euro_label" />

    <Button
        android:id="@+id/btnWon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_won_label" />

    <EditText
        android:id="@+id/editOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editOther_hint"
        android:inputType="none" />

    <Button
        android:id="@+id/btnOpenConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_cfg_label" />

</LinearLayout>
